samples/_failures_safe/1761655542_3bdb79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21bccbb6.c: In function ‘parser_init’:
./samples/SAFE/__tmp_21bccbb6.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
